--- a/tmux.conf
+++ b/tmux.conf
@@ -9,3 +9,8 @@ set-window-option -g mode-keys vi
 unbind %
 bind \ split-window -h
 bind - split-window -v
+
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
