--- a/src/tmux.conf
+++ b/src/tmux.conf
@@ -4,7 +4,7 @@ set -g status-bg black
 set -g status-fg white
 set-window-option -g window-status-current-bg red
 setw -g automatic-rename
-setw -g mode-mouse on
+#setw -g mode-mouse on
 set-window-option -g mode-keys vi
 unbind %
 bind \ split-window -h
@@ -14,3 +14,13 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+
+setw -g mode-keys vi
+
+# Setup 'v' to begin selection as in Vim
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
