--- a/src/tmux.conf
+++ b/src/tmux.conf
@@ -17,6 +17,8 @@ bind l select-pane -R
 
 setw -g mode-keys vi
 
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+
 # Setup 'v' to begin selection as in Vim
 bind-key -t vi-copy v begin-selection
 bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
