--- a/src/tmux.conf
+++ b/src/tmux.conf
@@ -1,8 +1,5 @@
 set-option -g prefix C-v
 bind-key C-v last-window
-set -g status-bg black
-set -g status-fg white
-set-window-option -g window-status-current-bg red
 setw -g automatic-rename
 #setw -g mode-mouse on
 set-window-option -g mode-keys vi
@@ -17,7 +14,7 @@ bind l select-pane -R
 
 setw -g mode-keys vi
 
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+# set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 # Setup 'v' to begin selection as in Vim
 bind-key -t vi-copy v begin-selection
@@ -26,3 +23,11 @@ bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 # Update default binding of `Enter` to also use copy-pipe
 unbind -t vi-copy Enter
 bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
+set -g status-bg white
+set -g window-status-current-bg "#27ae60"
+set -g window-status-current-fg white
+set -g status-left ''
+set -g status-right ''
+set -g history-limit 10000
+set-option -g default-shell /usr/local/bin/fish
