--- a/src/tmux.conf
+++ b/src/tmux.conf
@@ -14,7 +14,7 @@ bind l select-pane -R
 
 setw -g mode-keys vi
 
-# set-option -g default-command "reattach-to-user-namespace -l zsh"
+set-option -g default-command "reattach-to-user-namespace -l fish"
 
 # Setup 'v' to begin selection as in Vim
 bind-key -t vi-copy v begin-selection
