--- a/src/tmux.conf
+++ b/src/tmux.conf
@@ -1,7 +1,7 @@
 set-option -g prefix C-v
 bind-key C-v last-window
 setw -g automatic-rename
-#setw -g mode-mouse on
+setw -g mode-mouse on
 set-window-option -g mode-keys vi
 unbind %
 bind \ split-window -h
@@ -14,15 +14,15 @@ bind l select-pane -R
 
 setw -g mode-keys vi
 
-set-option -g default-command "reattach-to-user-namespace -l fish"
+#set-option -g default-command "reattach-to-user-namespace -l fish"
 
 # Setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+#bind-key -t vi-copy v begin-selection
+#bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Update default binding of `Enter` to also use copy-pipe
 unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+#bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 set -g status-bg white
 set -g window-status-current-bg "#27ae60"
@@ -30,4 +30,5 @@ set -g window-status-current-fg white
 set -g status-left ''
 set -g status-right ''
 set -g history-limit 10000
-set-option -g default-shell /usr/local/bin/fish
+set-option -g default-shell /bin/bash
+set -g default-terminal "screen-256color"
