--- a/src/tmux.conf
+++ b/src/tmux.conf
@@ -17,18 +17,24 @@ setw -g mode-keys vi
 #set-option -g default-command "reattach-to-user-namespace -l fish"
 
 # Setup 'v' to begin selection as in Vim
-#bind-key -t vi-copy v begin-selection
-#bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe 'xclip -in -selection clipboard'
 
 # Update default binding of `Enter` to also use copy-pipe
 unbind -t vi-copy Enter
 #bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
-set -g status-bg white
+set -g status-bg black
+set -g status-fg white
 set -g window-status-current-bg "#27ae60"
 set -g window-status-current-fg white
 set -g status-left ''
 set -g status-right ''
-set -g history-limit 10000
+set -g history-limit 100000
 set-option -g default-shell /bin/bash
-set -g default-terminal "screen-256color"
+#set -g default-terminal "screen-256color"
+
+#set -g default-terminal "screen-256color-bce"
+#source ~/.solarized/tmux-colors-solarized/tmuxcolors-256.conf
+
+set -s escape-time 0
